fixed scroll down spacing

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ button:hover {
   display: table;
   width: 100%;
   height: 100%;
-  margin-top: -13rem;
+  margin-top: -11rem;
 }
 
 #wrapper-inner {
